src/App.css
* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #356D65;
  height: 20vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
  border-bottom: 15px solid #85bfb7;
}

.logo {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 80%;
  max-width: 939px;
  margin: 0 auto;
}

.logo h1 {
  text-transform: uppercase;
  letter-spacing: 0.1em;
  color: #000;
  font-size: 40px;
}

@media(max-width: 939px) {
  .logo h1 {
    font-size: 4vw;
  }
}

.logo__image {
  width: 8%;
  margin-right: 3vw;
  border-radius: 50%;
  background: #F1CBB5;
  padding: .5%;
}

.App-link {
  color: #303435;
}


ul {
  list-style-type: none;
  padding-left: 0;
}

.display {
  display: flex;
  flex-direction: row;
  max-width: 1200px;
  margin: 0 auto;
}

.display__login--container {
  max-width: 353px;
  border: 3px solid black;
  border-radius: 15px;
  box-sizing: border-box;
  margin: 0 auto;
  padding: 3%;
}

.display__login--container h2 {
  border-bottom: 1px solid #888;
  padding-bottom: 4%;
  margin-top: 0;
}

.display__login {
  flex: 1;
  padding: 3%;
}

label {
  display: block;
  margin-bottom: 5%;
  text-align: center;
}

input {
  display: block;
  max-width: 352px;
  width: 100%;
  min-height: 31px;
  margin: 0 auto;
  text-align: center;
  border: 3px solid black;
  background: white;
  padding: 3%;
  border-radius: 10px;
  max-height: 25px;
}

.display__user--profile {
  border-radius: 15px;
  border: 3px solid black;
  background: white;
  padding: 3%;
  transition: 0.3s all ease-in-out;
}

.display__user--profile:hover {
  -webkit-box-shadow: 7px 7px 0px 0px rgba(148, 148, 148, 1);
  -moz-box-shadow: 7px 7px 0px 0px rgba(148, 148, 148, 1);
  box-shadow: 7px 7px 0px 0px rgba(148, 148, 148, 1);
}

.display__user--profile img {
  max-width: 100px;
  width: 80%;
  border: 5px solid #F7ECDF;
  border-radius: 50%;
}

.display__results {
  flex: 2;
  padding: 3%;
}

.display__results ul {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: 0;
}

.display__results ul li {
  box-sizing: border-box;
  width: 48%;
  border-radius: 15px;
  background: white;
  border: 3px solid black;
  padding: 3%;
  margin-bottom: 3%;
  text-align: left;
  transition: 0.3s all ease-in-out;
  position: relative;
}

.display__results ul li:hover {
  -webkit-box-shadow: 7px 7px 0px 0px rgba(148, 148, 148, 1);
  -moz-box-shadow: 7px 7px 0px 0px rgba(148, 148, 148, 1);
  box-shadow: 7px 7px 0px 0px rgba(148, 148, 148, 1);
}

.display__results h4 {
  margin: 0;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  width: fit-content;
  padding: 0 0 7% 0;
}

.display__results h4 .eventType {
  flex: 2;
}

.display__results h4 svg {
  margin-right: 5px;
  margin-top: 2.5%;
}

.status,
.status__closed,
.status__opened {
  color: white;
  padding: 2%;
  border-radius: 7px;
  text-transform: uppercase;
  box-sizing: border-box;
  width: fit-content;
  position: absolute;
  right: 5%;
  letter-spacing: 0.05em;
}

.input__button {
  color: white;
  text-transform: uppercase;
  padding: 2%;
  border-radius: 7px;
  font-weight: bold;
  font-size: 15px;
  letter-spacing: 0.1em;
  margin-top: 5%;
  max-width: 352px;
  width: 100%;
  transition: 0.3s all ease-in-out;
  border: 1px solid black;
}

.input__button:hover {
  -webkit-box-shadow: 7px 7px 0px 0px rgba(148, 148, 148, 1);
  -moz-box-shadow: 7px 7px 0px 0px rgba(148, 148, 148, 1);
  box-shadow: 7px 7px 0px 0px rgba(148, 148, 148, 1);
}

.status__opened {
  background: #489030;
}

.status__closed {
  background: #ED4337;
}

.status,
.input__button {
  background: #000;
}

.button-img {
  height: 20px;
  margin-right: 2%;
}

/* colours headband= #356D65 res= #F1CBB5 buttonbg= #F7ECDF userprofile bg =#FFF text = #222 */

